# ION_MIVE

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  run_tests.py
backend/app/: __init__.py  cli.py  config_check.py  container.py  ingest_cli.py  main.py
backend/app/api/: __init__.py  service.py
backend/app/core/: __init__.py  clock.py  config.py  errors.py  models.py  orchestrator.py  ports.py
backend/app/modules/: __init__.py  ive_common.py
backend/app/modules/context_pack/: __init__.py  builder.py
backend/app/modules/gemini_ive/: __init__.py  adapter.py  backend.py
backend/app/modules/mive/: __init__.py  comparator.py  text.py
backend/app/modules/openai_ive/: __init__.py  adapter.py  backend.py
backend/app/modules/renderer/: __init__.py  renderer.py
backend/app/modules/retrieval/: __init__.py  chunker.py  embeddings.py  ingest.py  memory_index.py  qdrant_store.py
backend/app/modules/telemetry/: __init__.py  pricing.py
backend/app/validation/: __init__.py  validators.py
backend/tests/: fakes.py  test_chunker.py  test_config.py  test_config_check.py  test_context_pack.py  test_core_ask_mocked.py  test_embedding_cache.py  test_import_safety.py  test_ive_normalization.py  test_mive_synthetic.py  test_provider_schema.py  test_qdrant_batching.py  test_renderer.py  test_retrieval.py  test_runtime_deps.py  test_sse_roundtrip.py  test_telemetry.py  test_transport_api.py  test_transport_service.py  util.py
corpus/: README.md
docs/: 01_PROJECT_IDENTITY.md  02_EPISTEMOLOGY.md  03_SYSTEM_SCOPE.md  04_RETRIEVAL_CONTEXT_SPEC.md  05_IVE_SPEC.md  06_MIVE_SPEC.md  07_OUTPUT_CONTRACT.md  08_COST_USAGE_SPEC.md  09_LOCAL_PRODUCT_PLAN.md  10_ACCEPTANCE_CRITERIA.md  11_SECURITY_AND_SECRETS.md  12_IMPLEMENTATION_MANDATE.md  13_SOURCE_REGISTER.md  14_ARCHITECTURE.md  15_API_CONTRACT.md  16_TARGET_FILE_TREE.md  17_RESEARCH_FIRST_MANDATE.md  ARCHITECTURE_DECISIONS.md  CORPUS_REGISTER.md  FIRST_ACTION_REPORT.md  MODEL_AND_PRICING_REGISTER.md  OPERATOR_CHECKLIST.md  PHASE_PLAN.md  RESEARCH_LOG.md
schemas/: context_pack.schema.json  ive_report.schema.json  mive_result.schema.json
ui/: Dockerfile  client.py  streamlit_app.py
