[project]
name = "ion-mive-backend"
version = "0.1.0"
description = "ION MIVE Lab backend: core orchestrator + modules (retrieval, IVE adapters, MIVE, renderer, telemetry) + FastAPI transport."
requires-python = ">=3.11"

# Runtime dependencies for the real (non-test) product path.
# NOTE: heavy libs (qdrant-client, provider SDKs, local embedder) are lazy-imported
# inside factories so importing the package requires no secrets and no network.
dependencies = [
    "jsonschema>=3.2",
    "numpy>=1.24",
    "qdrant-client>=1.7",
    "pypdf>=4.0",
    # provider SDKs — imported lazily, only when a real client is constructed:
    "openai>=1.40",
    "google-genai>=0.3",
]

[project.optional-dependencies]
# Real local embedding backend (retrieval works with any EmbeddingPort).
local-embed = ["sentence-transformers>=2.2"]
# FastAPI transport (M8). httpx is required by fastapi.testclient used in tests.
api = ["fastapi>=0.135", "uvicorn>=0.30", "sse-starlette>=2.0", "httpx>=0.27"]
dev = ["pytest>=8.0"]

[project.scripts]
ion-ask = "app.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
